# ManagementCli

./: MANIFEST.in  README.md  config.yml  net_inventory.yml  pyproject.toml  requirements.txt  setup.py
fabric/managecli/: config_processor.py  configuration.py  manage_command.py  managecli.py  show_command.py  tokens.py
fabric/managecli/test/: config.yml  test_managecli.py
fabric_mgmt_cli/: __init__.py
fabric_mgmt_cli/managecli/: command.py  config_processor.py  configuration.py  kafka_processor.py  manage_command.py  managecli.py  show_command.py  tokens.py
fabric_mgmt_cli/managecli/net/: commands.py  nso.py  resources.py  services.py  util.py
fabric_mgmt_cli/managecli/test/: config.yml  manage_command_test.py  test_managecli.py
