[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric-mgmt-cli"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "FABRIC Management CLI"
dynamic = ["version"]

keywords = ["Swagger", "Fabric Management Cli"]

requires-python = '>=3.9'
dependencies = [
    "click==7.1.2",
    "pytest==7.1.1",
    "fabric-cf==1.4.0",
    "fabric-credmgr-client==1.5.0b4"
    ]

scripts = { "fabric-mgmt-cli" = "fabric_mgmt_cli.managecli.managecli:managecli"}

[project.optional-dependencies]
test = ["coverage>=4.0.3",
        "nose>=1.3.7",
        "pluggy>=0.3.1",
        "py>=1.4.31",
        "randomize>=0.13"
        ]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/ManagementCli"


[tool.flit.module]
name = "fabric_mgmt_cli"
